--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 <!-- Header -->
 <div class="header">
     <h1> Broadway Design</h1>
-   <div class="headerNav">
-      <a href="#">Home</a><br><br>
-      <a href="#">About</a><br><br>
-      <a href="#">Work</a><br><br>
-      <a href="#">Team</a><br><br>
-      <a href="#">Contact</a>
+
+      <p><a href="#" class="menuNav">Home</a></p>
+      <p><a href="#" class="menuNav">About</a></p>
+      <p><a href="#" class="menuNav">Work</a></p>
+      <p><a href="#" class="menuNav">Team</a></p>
+      <p><a href="#" class="menuNav">Contact</a></p>
     </div>
 </div>
 
 <!-- Body -->
-<div class="body">
+<div class="content">
     <h2>Our Process</h2>
       <img src="resources/images/identify.svg" alt="squiggly arrow">
       <h3>Identify</h3>
@@ -33,9 +33,11 @@
       <img src="resources/images/execute.svg" alt="squiggly arrow">
       <h3>Execute</h3>
       <p>We put everything we have into our work.</p>
+</div>
 
     <h3 id="designed">Designed in New York</h3>
 
+<div class="about">
     <h3>Portfolio</h3>
       <p>Coming Soon</p>
 
@@ -52,11 +54,10 @@
 <div class="footer">
   <nav>
     <p>© Broadway 2017
-    <a href="#">Home</a>
-    <a href="#">About</a>
-    <a href="#">Work</a>
-    <a href="#">Team</a>
-    <a href="#">Contact</a>
+    <a href="#" class="menuNav">Home</a>
+    <a href="#" class="menuNav">About</a>
+    <a href="#" class="menuNav">Work</a>
+    <a href="#" class="menuNav">Team</a>
     </p>
   </nav>
 </div>
